--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "Python: Current File",
+            "name": "Python: IP Stack CLI",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "main.py",
+            "args": ["--locate_ips", "1.1.1.1"],
+            // "args": ["--set_access_key","209e0fdaadff5327fa15a6d6453c758b"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
